--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -90,22 +90,14 @@ file-upload-endpoints:
       path-pattern: "/**/certificate/import"
 
 script:
-#  generate-gpg-keypair:
-#    path: /usr/share/xroad/scripts/generate_gpg_keypair.sh
   generate-certificate:
     path: /usr/share/xroad/scripts/generate_certificate.sh
     args: -n internal -f -S -p 2>&1
   generate-backup:
-#    path: /usr/share/xroad/scripts/backup_xroad_proxy_configuration.sh
-    valid-filename-pattern: "^(?!\\.)[\\w\\.\\-]+\\.gpg$" # required for validator, but not used. todo:
-#  restore-configuration:
-#    path: /usr/share/xroad/scripts/restore_xroad_proxy_configuration.sh
+    valid-filename-pattern: "^(?!\\.)[\\w\\.\\-]+\\.gpg$" # required to init validator, but not used. todo:
 
 common-module-endpoints:
   base-path: /api/v1
-
-#gpgkeys:
-#  gpghome: /etc/xroad/gpghome
 
 #Profile based configuration
 ---
