--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -134,6 +134,7 @@ jobs:
       - name: Save docker images from registry
         run: |
           mkdir -p ${{ runner.temp }}/docker-images
+          docker pull localhost:5000/ss-backup-manager:latest
           docker pull localhost:5000/ss-configuration-client:latest
           docker pull localhost:5000/ss-proxy:latest
           docker pull localhost:5000/ss-signer:latest
@@ -144,6 +145,7 @@ jobs:
           docker pull localhost:5000/ss-db-messagelog-init:latest
           docker pull localhost:5000/ss-db-opmonitor-init:latest
 
+          docker save -o ${{ runner.temp }}/docker-images/ss-backup-manager.tar localhost:5000/ss-backup-manager:latest
           docker save -o ${{ runner.temp }}/docker-images/ss-configuration-client.tar localhost:5000/ss-configuration-client:latest
           docker save -o ${{ runner.temp }}/docker-images/ss-proxy.tar localhost:5000/ss-proxy:latest
           docker save -o ${{ runner.temp }}/docker-images/ss-signer.tar localhost:5000/ss-signer:latest
