--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,6 +38,11 @@ jobs:
         ports:
           - 5000:5000
     steps:
+      - name: Start Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: start-measurement
+          label: 'Build, unit tests and packaging'
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # SonarCloud: Shallow clones should be disabled for a better relevancy of analysis
@@ -63,6 +68,11 @@ jobs:
           gradle-home-cache-cleanup: true
           dependency-graph: generate-and-submit
           add-job-summary-as-pr-comment: always
+      - name: Build, test and package code setup measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: get-measurement
+          label: 'Build environment setup'
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
@@ -89,6 +99,11 @@ jobs:
           reporter: java-junit
           list-suites: 'failed'
           list-tests: 'failed'
+      - name: Build, test and package code execution measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: get-measurement
+          label: 'Build, unit tests and packaging'
       - name: Store files for arm packaging
         uses: pyTooling/upload-artifact@v4 # https://github.com/actions/upload-artifact/issues/38
         with:
@@ -128,6 +143,16 @@ jobs:
           name: debian-packages
           path: src/packages/build/ubuntu22.04/*.deb
           compression-level: 0 #No point in compressing these
+      - name: Packaging and upload artifacts measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: get-measurement
+          label: 'Packaging and upload artifacts'
+      - name: Show Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: display-results
+          pr-comment: true
       - name: Clean up workspace #otherwise might run out of disk space in the next steps
         working-directory: ./src
         run: ./gradlew clean
@@ -165,6 +190,11 @@ jobs:
     needs: BuildAndPackageWithUnitTests
     runs-on: ubuntu-22.04-arm
     steps:
+      - name: Start Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: start-measurement
+          label: 'Packaging for arm architecture'
       - name: Ensure required packages
         env:
           DEBIAN_FRONTEND: noninteractive # Less output to log
@@ -185,6 +215,11 @@ jobs:
         uses: pyTooling/download-artifact@v4 # https://github.com/actions/upload-artifact/issues/38
         with:
           name: workspace-for-arm
+      - name: Set up measurement for arm packaging
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: get-measurement
+          label: 'Set up arm packaging'
       - name: Build native dependencies
         working-directory: ./src
         run: ./gradlew :service:signer:signer-api:make
@@ -208,6 +243,16 @@ jobs:
           name: debian-packages-arm
           path: src/packages/build/ubuntu22.04/*.deb
           compression-level: 0 #No point in compressing these
+      - name: Measurement for arm packaging
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: get-measurement
+          label: 'Packaging for arm architecture'
+      - name: Show Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: display-results
+          pr-comment: true
   RunCSSystemTests:
     name: Run Central Server system tests
     needs: BuildAndPackageWithUnitTests
@@ -218,6 +263,11 @@ jobs:
         ports:
           - 5000:5000
     steps:
+      - name: Start Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: start-measurement
+          label: 'Central Server system tests'
       - uses: actions/checkout@v4
       - name: Set up JDK 21
         uses: actions/setup-java@v4
@@ -250,9 +300,19 @@ jobs:
           build-args: |
             PACKAGE_SOURCE=internal
           tags: localhost:5000/xrd-centralserver:${{ github.sha }}
+      - name: Central Server test setup measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: get-measurement
+          label: 'Set up Central Server tests'
       - name: Run Central Server system tests
         working-directory: ./src
         run: ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :central-server:admin-service:ui-system-test:systemTest -PsystemTestCsImageName=localhost:5000/xrd-centralserver:${{ github.sha }}
+      - name: Test Central Server measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: get-measurement
+          label: 'Test Central Server'
       - name: Test report
         env:
           NODE_OPTIONS: '--max-old-space-size=6144'
@@ -275,6 +335,18 @@ jobs:
           name: CS System Test report
           path: |
             src/central-server/admin-service/ui-system-test/build/allure-report/
+      - name: Show Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: display-results
+          pr-comment: true
+      - name: Upload GMT jsons
+        uses: actions/upload-artifact@v4
+        with:
+          name: CS System Test GMT jsons
+          path: |
+            /tmp/eco-ci/lap-data.json
+            /tmp/eco-ci/total-data.json
   RunSSSystemTests:
     name: Run Security Server system tests
     needs: BuildAndPackageWithUnitTests
@@ -285,6 +357,11 @@ jobs:
         ports:
           - 5000:5000
     steps:
+      - name: Start Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: start-measurement
+          label: 'Security Server system tests'
       - uses: actions/checkout@v4
       - name: Set up JDK 21
         uses: actions/setup-java@v4
@@ -307,11 +384,21 @@ jobs:
             IMAGE_ID=$(docker load -i "$tar" | awk '/Loaded image:/ {print $NF}')
             docker push "$IMAGE_ID"
           done
+      - name: Security Server test setup measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: get-measurement
+          label: 'Set up Security Server tests'
       - name: Run Security Server system tests
         working-directory: ./src
         run: |
           mv -f ../deployment/security-server/docker/.env.github ../deployment/security-server/docker/.env
           ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :security-server:system-test:systemTest
+      - name: Test Security Server measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: get-measurement
+          label: 'Test Security Server'
       - name: Test report
         env:
           NODE_OPTIONS: '--max-old-space-size=6144'
@@ -332,6 +419,11 @@ jobs:
             src/security-server/system-test/build/container-logs/
             src/security-server/system-test/build/reports/test-automation/selenide-failures/*.png
 
+      - name: Show Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: display-results
+          pr-comment: true
   RunE2ETests:
     name: Run E2E tests
     needs: BuildAndPackageWithUnitTests
@@ -342,6 +434,11 @@ jobs:
         ports:
           - 5000:5000
     steps:
+      - name: Start Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: start-measurement
+          label: 'E2E tests'
       # Setup
       - uses: actions/checkout@v4
       - name: Set up JDK 21
@@ -386,6 +483,11 @@ jobs:
             IMAGE_ID=$(docker load -i "$tar" | awk '/Loaded image:/ {print $NF}')
             docker push "$IMAGE_ID"
           done
+      - name: E2E test setup measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: get-measurement
+          label: 'Set up E2E tests'
       # Execute and report
       - name: Run E2E tests
         working-directory: ./src
@@ -393,6 +495,11 @@ jobs:
           mv -f ../deployment/security-server/docker/.env.github ../deployment/security-server/docker/.env
           docker network create xroad-network
           ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :security-server:e2e-test:e2eTest -Pe2eTestCSImage=localhost:5000/xrd-centralserver:${{ github.sha }}
+      - name: E2E test measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: get-measurement
+          label: 'E2E tests'
       - name: Test report
         env:
           NODE_OPTIONS: '--max-old-space-size=6144'
@@ -409,3 +516,8 @@ jobs:
           name: E2E report
           path: |
             src/security-server/e2e-test/build/allure-report/
+      - name: Show Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4.7
+        with:
+          task: display-results
+          pr-comment: true
