chore: using volume mount /var/lib/xroad in backup-manager to have persistent storage for pre-restore backup
Refs: XRDDEV-2896

--- a/deployment/security-server/k8s/charts/security-server/values.yaml
+++ b/deployment/security-server/k8s/charts/security-server/values.yaml
@@ -344,7 +344,7 @@ services:
         secretName: "db-openbao"
         key: "password"
     volumeMounts:
-      - mountPath: /var/lib/xroad/backup
+      - mountPath: /var/lib/xroad
         name: backups-volume
       - mountPath: /etc/xroad/gpghome
         name: gpg-key-volume
