chore: adding missing LICENSE.txt and 3RD-PARTY-NOTICES.txt files
Refs: XRDDEV-2890

--- a/deployment/security-server/docker/base/Dockerfile-baseline
+++ b/deployment/security-server/docker/base/Dockerfile-baseline
@@ -18,3 +18,6 @@ RUN mkdir /var/log/xroad && \
     chown -R xroad:xroad /var/tmp/xroad && \
     chown -R xroad:xroad /var/cache/xroad && \
     chown -R xroad:xroad /etc/xroad
+
+COPY build/LICENSE.txt /opt/app/LICENSE.txt
+COPY build/3RD-PARTY-NOTICES.txt /opt/app/3RD-PARTY-NOTICES.txt
