feat: user/role management for database based users

--- a/src/security-server/admin-service/application/src/main/resources/permissions.yml
+++ b/src/security-server/admin-service/application/src/main/resources/permissions.yml
@@ -83,6 +83,10 @@
 -   view_api_keys: [XROAD_SYSTEM_ADMINISTRATOR, XROAD_SECURITYSERVER_OBSERVER]
 -   update_api_key: [XROAD_SYSTEM_ADMINISTRATOR]
 -   revoke_api_key: [XROAD_SYSTEM_ADMINISTRATOR]
+-   add_admin_user: [XROAD_SYSTEM_ADMINISTRATOR]
+-   view_admin_users: [XROAD_SYSTEM_ADMINISTRATOR, XROAD_SECURITYSERVER_OBSERVER]
+-   update_admin_user: [XROAD_SYSTEM_ADMINISTRATOR]
+-   delete_admin_user: [XROAD_SYSTEM_ADMINISTRATOR]
 - view_sys_params: [XROAD_SECURITY_OFFICER, XROAD_SYSTEM_ADMINISTRATOR, XROAD_SECURITYSERVER_OBSERVER]
 -   view_anchor: [XROAD_SECURITY_OFFICER, XROAD_SYSTEM_ADMINISTRATOR, XROAD_SECURITYSERVER_OBSERVER]
 -     download_anchor: [XROAD_SECURITY_OFFICER, XROAD_SYSTEM_ADMINISTRATOR]
@@ -104,5 +108,6 @@
 -   download_diagnostics_report: [XROAD_SYSTEM_ADMINISTRATOR]
 - restore_configuration: [XROAD_SYSTEM_ADMINISTRATOR]
 - view_version: [XROAD_SECURITY_OFFICER, XROAD_SYSTEM_ADMINISTRATOR, XROAD_REGISTRATION_OFFICER, XROAD_SERVICE_ADMINISTRATOR, XROAD_SECURITYSERVER_OBSERVER]
+- view_authentication_provider_type: [XROAD_SECURITY_OFFICER, XROAD_SYSTEM_ADMINISTRATOR, XROAD_REGISTRATION_OFFICER, XROAD_SERVICE_ADMINISTRATOR, XROAD_SECURITYSERVER_OBSERVER]
 - view_node_type: [XROAD_SECURITY_OFFICER, XROAD_SYSTEM_ADMINISTRATOR, XROAD_REGISTRATION_OFFICER, XROAD_SERVICE_ADMINISTRATOR, XROAD_SECURITYSERVER_OBSERVER]
 - change_ss_address: [XROAD_SYSTEM_ADMINISTRATOR]
