chore: added ignores for self-signed certs when dealing with OCSP.
Additional fix for SHA1 to SHA256 cert migration

Refs: XRDDEV-2756

--- a/Docker/xrd-dev-stack/compose.aux.yaml
+++ b/Docker/xrd-dev-stack/compose.aux.yaml
@@ -13,6 +13,8 @@ services:
       test: [ "CMD", "curl", "-f", "-k", "https://localhost:4000" ]
     ports:
       - "0:4000" # Frontend
+      - "0:9994" # Signer debug
+      - "0:5432" # DB
     networks:
       - xroad-network
   testca:
