chore: improve docker compose healtchecks and improve default logging
Refs: XRDDEV-2756

--- a/src/common/common-properties/src/main/resources/xroad-logging.yaml
+++ b/src/common/common-properties/src/main/resources/xroad-logging.yaml
@@ -1,6 +1,7 @@
 quarkus:
   log:
     level: INFO
+    min-level: TRACE
     category:
       "io.quarkus":
         level: INFO #TODO should be reduced to INFO once development is done
