--- a/deployment/security-server/docker/compose.yaml
+++ b/deployment/security-server/docker/compose.yaml
@@ -8,7 +8,7 @@ services:
     healthcheck:
       interval: 5s
       retries: 40
-      test: ["CMD", "sh", "-c", "bao secrets list -format=json | jq 'has(\"xrd-pki/\")' | grep -q true"]
+      test: [ "CMD", "sh", "-c", "bao secrets list -format=json | jq 'has(\"xrd-pki/\")' | grep -q true" ]
     networks:
       - xrd-ss-network
     volumes:
@@ -21,6 +21,13 @@ services:
       - POSTGRES_DB=serverconf
     networks:
       - xrd-ss-network
+    ports:
+      - "0:5432"
+    healthcheck:
+      start_period: 5s
+      interval: 5s
+      retries: 40
+      test: [ "CMD", "pg_isready", "-U", "postgres", "-h", "localhost" ]
     deploy:
       resources:
         reservations:
@@ -56,6 +63,11 @@ services:
       - POSTGRES_DB=messagelog
     networks:
       - xrd-ss-network
+    healthcheck:
+      start_period: 5s
+      interval: 5s
+      retries: 40
+      test: [ "CMD", "sh", "-c", "pg_isready -U postgres -h localhost" ]
     deploy:
       resources:
         reservations:
@@ -93,7 +105,8 @@ services:
       - db_user=serverconf
       - db_schema=public
     depends_on:
-      - db-serverconf
+      db-serverconf:
+        condition: service_healthy
     networks:
       - xrd-ss-network
     deploy:
@@ -112,7 +125,8 @@ services:
       - db_user=messagelog
       - db_schema=public
     depends_on:
-      - db-messagelog
+      db-messagelog:
+        condition: service_healthy
     networks:
       - xrd-ss-network
     deploy:
@@ -193,6 +207,8 @@ services:
       - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_DRIVER_CLASS=org.postgresql.Driver
       - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_USERNAME=serverconf
       - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_PASSWORD=secret
+    ports:
+      - "0:9999" # debug port
     healthcheck:
       interval: 5s
       retries: 40
