--- a/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
+++ b/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
@@ -106,6 +106,13 @@ set_db_configuration_source_properties() {
   fi
 }
 
+set_server_node_type() {
+  if [ -r /etc/xroad/conf.d/node.ini ]; then
+    node_type=$(crudini --get '/etc/xroad/conf.d/node.ini' node type 2>/dev/null || echo standalone)
+    export XROAD_NODE_TYPE="$node_type"
+  fi
+}
+
 if [ -f "/etc/xroad/services/secret-store-local.conf" ]; then
   source /etc/xroad/services/secret-store-local.conf
 fi
@@ -113,3 +120,4 @@ fi
 load_from_properties
 set_quarkus_profiles
 set_db_configuration_source_properties
+set_server_node_type
