--- a/src/security-server/system-test/src/intTest/resources/compose.systemtest.yaml
+++ b/src/security-server/system-test/src/intTest/resources/compose.systemtest.yaml
@@ -7,7 +7,7 @@ services:
     environment:
       - JAVA_TOOL_OPTIONS=-Dxroad.internal.passwordstore-provider=file
       - XROAD_SIGNER_OCSP_RESPONSE_RETRIEVAL_ACTIVE=true
-      - QUARKUS_LOG_LEVEL=TRACE
+      - QUARKUS_LOG_LEVEL=DEBUG
   proxy:
     networks:
       xrd-ss-network:
