--- a/src/lombok.config
+++ b/src/lombok.config
@@ -1,2 +1,3 @@
 lombok.addLombokGeneratedAnnotation = true
 lombok.copyableAnnotations += org.springframework.beans.factory.annotation.Value
+lombok.copyableAnnotations += org.springframework.beans.factory.annotation.Qualifier
