--- a/src/service/op-monitor/op-monitor-int-test/src/intTest/resources/application-override.yml
+++ b/src/service/op-monitor/op-monitor-int-test/src/intTest/resources/application-override.yml
@@ -7,7 +7,8 @@ logging:
     liquibase: WARN
     org.springframework: INFO
     org.niis: INFO
-    com.nortal.test: INFO # TRACE is helpful for development
+    com.nortal.test: TRACE # TRACE is helpful for development
+    org.testcontainers.containers: DEBUG
 
 test-automation:
   report-name: xroad-op-monitor-test-suite
@@ -22,14 +23,8 @@ test-automation:
   containers:
     testable-container:
       reuse-between-runs: ${reuse-between-runs}
-      spring-boot:
-        base-image: eclipse-temurin:21-noble
-        jar-debug-enabled: true
-        debug-port: 9000
-        jacoco:
-          enabled: true
-        jar-build-dir: ../op-monitor-application/build/libs/
-        spring-profiles-to-activate: int-test,audit-test
+      directory-mounts:
+        - "/etc/xroad/globalconf/:build/resources/intTest/container-files/etc/xroad/globalconf/"
     context-containers:
       xrd-db:
         enabled: true
@@ -37,6 +32,7 @@ test-automation:
 
   custom:
     op-monitor-container-enabled: true
+    image-name: "localhost:5555/ss-op-monitor"
 # toggle for reusable containers. This allows quicker test development as containers are not destroyed between runs.
 # WARNING: this leaves containers running indefinitely. They have to be stopped manually.
 # Note: this required testcontainers.reuse.enable=true property to be defined in your ~/.testcontainers.properties file
