--- a/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
+++ b/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
@@ -20,6 +20,7 @@ xroad:
       op-monitor:
         enabled: true
   proxy-ui-api:
+    enforce-user-password-policy: true
     rate-limit-enabled: true
     rate-limit-requests-per-second: 100
     rate-limit-requests-per-minute: 1000
