--- a/src/service/signer/signer-int-test/src/intTest/resources/compose.intTest.yaml
+++ b/src/service/signer/signer-int-test/src/intTest/resources/compose.intTest.yaml
@@ -34,6 +34,7 @@ services:
           memory: 512M
     volumes:
       - ./signer-container-files/etc/xroad/globalconf:/etc/xroad/globalconf
+      - softhsm-tokens:/var/lib/softhsm/tokens/
   signer-secondary:
     build:
       context: ./signer-container-files/
@@ -72,7 +73,7 @@ services:
           memory: 512M
     volumes:
       - ./signer-container-files/etc/xroad/globalconf:/etc/xroad/globalconf
-
+      - softhsm-tokens:/var/lib/softhsm/tokens/
   db-serverconf:
     image: postgres:17
     environment:
@@ -118,3 +119,6 @@ services:
       interval: 5s
       retries: 40
       test: [ "CMD", "curl", "-f", "http://localhost:8888/testca/certs/" ]
+
+volumes:
+  softhsm-tokens:
