chore: transient certificate on hsm test
Refs: XRDDEV-2932

--- a/src/service/signer/signer-int-test/src/intTest/resources/signer-container-files/Dockerfile
+++ b/src/service/signer/signer-int-test/src/intTest/resources/signer-container-files/Dockerfile
@@ -6,10 +6,14 @@ USER root
 
 RUN apt-get -qq update \
   && apt-get -qq install --no-install-recommends curl softhsm2 \
+                  opensc \
   && apt-get -qq clean
 
 RUN mkdir -p /var/lib/softhsm/tokens/ && \
     adduser xroad softhsm
+
+COPY add-key-into-hsm.sh /add-key-into-hsm.sh
+RUN chmod +x /add-key-into-hsm.sh
 
 USER xroad
 RUN softhsm2-util --init-token --slot 0 --label 'x-road-softhsm2' --so-pin 1234 --pin 1234
