chore: primary/secondary clustering support for Signer (#2868)
* chore: add node type to env variable

Refs: XRDDEV-2932

* chore: add createdAt and updatedAt to Signer entities

Refs: XRDDEV-2932

* chore: deny write operations if secondary node

Refs: XRDDEV-2932

* chore: split services into read/write services

Refs: XRDDEV-2932

* chore: block write operations on secondary node

Refs: XRDDEV-2932

* chore: block concurrent executions of modules refresh

Refs: XRDDEV-2932

* chore: rpc endpoint for refresh modules

Refs: XRDDEV-2932

* chore: int tests for secondary node and minor fixes

Refs: XRDDEV-2932

* chore: when changing token pin, deactivate token only after successful change

Refs: XRDDEV-2932

* chore: key friendly name can be null

Refs: XRDDEV-2932

* chore: sharing softhsm between primary/secondary nodes, sign int tests on secondary node

Refs: XRDDEV-2932

* chore: transient certificate on hsm test

Refs: XRDDEV-2932

* chore: cleanup

Refs: XRDDEV-2932

* chore: readlock on moduleManager

Refs: XRDDEV-2932

* Revert "chore: readlock on moduleManager"

This reverts commit 4f28e58e3d9399ecb7946f0fe61957fe6e15b37a.

* chore: using synchronized on moduleManeger

Refs: XRDDEV-2932

--- a/src/service/signer/signer-int-test/src/intTest/resources/compose.intTest.yaml
+++ b/src/service/signer/signer-int-test/src/intTest/resources/compose.intTest.yaml
@@ -34,6 +34,46 @@ services:
           memory: 512M
     volumes:
       - ./signer-container-files/etc/xroad/globalconf:/etc/xroad/globalconf
+      - softhsm-tokens:/var/lib/softhsm/tokens/
+  signer-secondary:
+    build:
+      context: ./signer-container-files/
+      args:
+        - SIGNER_IMG=${SIGNER_IMG}
+      dockerfile: Dockerfile
+    pull_policy: always
+    environment:
+      - XROAD_HOST=signer-secondary
+      - XROAD_COMMON_RPC_USE_TLS=false
+      - XROAD_COMMON_GLOBAL_CONF_SOURCE=FILESYSTEM
+      - XROAD_SIGNER_ADDON_HWTOKEN_ENABLED=true
+      - JAVA_TOOL_OPTIONS=-Dxroad.internal.passwordstore-provider=file -Dxroad.internal.passwordstore-file-path=/etc/xroad/
+      - XROAD_SIGNER_OCSP_RESPONSE_RETRIEVAL_ACTIVE=true
+      - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_URL=jdbc:postgresql://db-serverconf:5432/serverconf
+      - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_DRIVER_CLASS=org.postgresql.Driver
+      - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_USERNAME=serverconf
+      - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_PASSWORD=secret
+      - XROAD_NODE_TYPE=secondary
+    ports:
+      - "0:9999" # debug port
+    healthcheck:
+      interval: 5s
+      retries: 40
+      test: [ "CMD", "curl", "-f", "-k", "http://localhost:4099/q/health" ]
+    depends_on:
+      db-serverconf-init:
+        condition: service_completed_successfully
+      signer:
+        condition: service_healthy
+    deploy:
+      resources:
+        reservations:
+          memory: 96M
+        limits:
+          memory: 512M
+    volumes:
+      - ./signer-container-files/etc/xroad/globalconf:/etc/xroad/globalconf
+      - softhsm-tokens:/var/lib/softhsm/tokens/
   db-serverconf:
     image: postgres:17
     environment:
@@ -79,3 +119,6 @@ services:
       interval: 5s
       retries: 40
       test: [ "CMD", "curl", "-f", "http://localhost:8888/testca/certs/" ]
+
+volumes:
+  softhsm-tokens:
