chore: reduce log verbosity during build

--- a/src/central-server/admin-service/core/src/test/resources/application-test.yml
+++ b/src/central-server/admin-service/core/src/test/resources/application-test.yml
@@ -6,4 +6,5 @@ spring:
     banner-mode: off
 
 logging:
-  config: classpath:centralserver-admin-service-test-logback.xml
+  level:
+    ROOT: ERROR
