chore: further log suppressions

--- a/src/service/op-monitor/op-monitor-core/src/test/resources/hibernate.properties
+++ b/src/service/op-monitor/op-monitor-core/src/test/resources/hibernate.properties
@@ -5,7 +5,7 @@ hibernate.jdbc.batch_size=100
 # Using HSQLB in automated tests during builds.
 op-monitor.hibernate.connection.driver_class=org.hsqldb.jdbcDriver
 # Using hsqldb.sqllog to see SQL statements in debug mode (gradle -d test)
-op-monitor.hibernate.connection.url=jdbc:hsqldb:mem:op-monitor;hsqldb.sqllog=3
+op-monitor.hibernate.connection.url=jdbc:hsqldb:mem:op-monitor
 op-monitor.hibernate.connection.username=opmonitor
 op-monitor.hibernate.connection.password=opmonitor
 op-monitor.hibernate.hbm2ddl.auto=create-drop
