--- a/src/central-server/admin-service/int-test/src/intTest/resources/application-override.yml
+++ b/src/central-server/admin-service/int-test/src/intTest/resources/application-override.yml
@@ -4,7 +4,7 @@ logging:
   level:
     ROOT: INFO
     cucumber: TRACE
-    liquibase: ERROR
+    liquibase: OFF
     org.springframework: INFO
     com.nortal.test: INFO # TRACE is helpful for development
 
