--- a/deployment/security-server/k8s/charts/security-server/values.yaml
+++ b/deployment/security-server/k8s/charts/security-server/values.yaml
@@ -7,6 +7,8 @@ init:
     database: "serverconf"
     username: "serverconf"
     schema: "public"
+    proxyUiSuperuser: "xrd"
+#    proxyUiSuperuserPassword:
   messagelog:
     image: localhost:5555/ss-db-messagelog-init:latest
     imagePullPolicy: IfNotPresent
