--- a/src/service/op-monitor/op-monitor-int-test/src/intTest/resources/application-override.yml
+++ b/src/service/op-monitor/op-monitor-int-test/src/intTest/resources/application-override.yml
@@ -22,17 +22,8 @@ test-automation:
       tags: "not @Skip"
   containers:
     testable-container:
-      reuse-between-runs: ${reuse-between-runs}
-      directory-mounts:
-        - "/etc/xroad/globalconf/:build/resources/intTest/container-files/etc/xroad/globalconf/"
-    context-containers:
-      xrd-db:
-        enabled: true
-        reuse-between-runs: ${reuse-between-runs}
+      enabled: false
 
-  custom:
-    op-monitor-container-enabled: true
-    image-name: "localhost:5555/ss-op-monitor"
 # toggle for reusable containers. This allows quicker test development as containers are not destroyed between runs.
 # WARNING: this leaves containers running indefinitely. They have to be stopped manually.
 # Note: this required testcontainers.reuse.enable=true property to be defined in your ~/.testcontainers.properties file
