--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -25,9 +25,8 @@ logback = "1.5.18"
 logbackAccess = "2.0.6"
 apacheCxf = "4.1.2"
 liquibase = "4.32.0"
-apacheCxf = "4.1.1"
 archUnitPlugin = "4.0.0"
-protobufPlugin = "0.9.4"
+protobufPlugin = "0.9.5"
 checkstyle = "10.22.0"
 jacoco = "0.8.12"
 resilience4j = "2.3.0"
@@ -222,12 +221,9 @@ quarkus-containerized = [
 springBoot = { id = "org.springframework.boot", version.ref = "springBoot" }
 openapi-generator = { id = "org.openapi.generator", version = "7.14.0" }
 sonarqube = { id = "org.sonarqube", version = "6.2.0.5505" }
-protobuf = { id = "com.google.protobuf", version = "0.9.5" }
+protobuf = { id = "com.google.protobuf", version = "protobufPlugin" }
 quarkus = { id = "io.quarkus", version.ref = "quarkus" }
 jandex = { id = "org.kordamp.gradle.jandex", version = "2.1.0" }
-openapi-generator = { id = "org.openapi.generator", version = "7.13.0" }
-sonarqube = { id = "org.sonarqube", version = "6.1.0.5360" }
-protobuf = { id = "com.google.protobuf", version.ref = "protobufPlugin" }
 frontendJDK21 = { id = "org.siouan.frontend-jdk21", version = "10.0.0" }
 shadow = { id = "com.gradleup.shadow", version = "8.3.8" }
 archUnit = { id = "com.societegenerale.commons.arch-unit-gradle-plugin", version.ref = "archUnitPlugin" }
