--- a/src/package.json
+++ b/src/package.json
@@ -14,15 +14,15 @@
     "@intlify/eslint-plugin-vue-i18n": "^4.0.1",
     "@rushstack/eslint-patch": "^1.12.0",
     "@tsconfig/node18": "^18.2.4",
-    "@types/node": "^22.15.30",
+    "@types/node": "^24.1.0",
     "@vitejs/plugin-basic-ssl": "^2.1.0",
-    "@vitejs/plugin-vue": "^5.2.4",
+    "@vitejs/plugin-vue": "^6.0.0",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.7.0",
-    "eslint": "^9.30.1",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.5.1",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.3",
     "eslint-plugin-vue": "^10.3.0",
     "eslint-plugin-vuetify": "^2.5.2",
     "happy-dom": "^18.0.1",
@@ -34,24 +34,18 @@
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.89.2",
     "typescript": "~5.8.3",
-    "vite": "^6.3.5",
+    "vite": "^7.0.6",
     "vite-plugin-vuetify": "^2.1.1",
     "vitest": "^3.2.4",
     "vue-eslint-parser": "^10.2.0",
-    "vue-i18n": "^11.1.9",
-    "vue-tsc": "^2.2.10"
+    "vue-i18n": "^11.1.11",
+    "vue-tsc": "^3.0.3"
   },
-  "pnpm": {
-    "overrides": {
-      "semver": "^7.5.3",
-      "cross-spawn": "7.0.5"
-    }
-  },
-  "packageManager": "pnpm@9.15.2",
+  "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad",
   "engines": {
     "npm": "use-pnpm",
     "yarn": "use-pnpm",
-    "node": ">=18 <=20",
-    "pnpm": ">=9"
+    "node": ">=22 <=24",
+    "pnpm": ">=10"
   }
 }
