--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -13,7 +13,8 @@ mapstruct = "1.6.3"
 jackson = "2.19.1"
 mockito = "5.18.0"
 springBoot = "3.5.4"
-junitJupiter = "5.11.4"
+junitJupiter = "5.12.2"
+junitPlatform = "1.12.2"
 xmlUnit = "2.10.3"
 bouncyCastle = "1.81"
 slf4j = "2.0.17"
@@ -48,6 +49,7 @@ springCloud-bom = { module = "org.springframework.cloud:spring-cloud-dependencie
 junit-jupiterEngine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junitJupiter" }
 junit-vintageEngine = { module = "org.junit.vintage:junit-vintage-engine", version.ref = "junitJupiter" }
 junit-jupiter-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junitJupiter" }
+junit-platform-launcher = { module = "org.junit.platform:junit-platform-launcher", version.ref = "junitPlatform" }
 
 xmlunit-core = { module = "org.xmlunit:xmlunit-core", version.ref = "xmlUnit" }
 xmlunit-matchers = { module = "org.xmlunit:xmlunit-matchers", version.ref = "xmlUnit" }
